fix some problems from professor's feedback

--- a/map.html
+++ b/map.html
@@ -11,14 +11,14 @@
   <script src= "js/index.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwEHZpseJX8jWCr5wzHXbUPz8CmlP6PHs&callback=initMap&libraries=&v=weekly" async defer></script>
 </head>
-<body>
+<body id="body_map">
 	<ul class="nav">
 		<li><a href="index.html">Resume</a></li>
 		<li><a href="winter2022.html">Winter2022</a></li>
 		<li><a href="myproject.html">Project</a></li>
     <li><a href="map.html">Map</a></li>
   </ul>
-  <h1> Where am I from? </h1>
+  <h1>Where am I from?</h1>
   <div id="map"></div>
   <p class="maincategory_winter">As a resident of Taipei, Taiwan. One of our most iconic landmarks is Taipei101.In addition, there are some fancy buildings and resturants around that area. Whether you're looking for breathtaking views or mouthwatering flavors, Taipei has something to offer for everyone.</p>
   <img class="Taiwanimg" src="image/taipei1.jpg" alt="Taiwanese picture">
