--- a/winter2022.html
+++ b/winter2022.html
@@ -38,7 +38,7 @@
 	  <li>Harvard University</li>
 	  <li>Massachusetts Institute of Technology(MIT)</li>
 	</ul>
-	<img class="winterbreakimg" src="image/Boston1.jpg" alt="boston picture">
-	<img class="winterbreakimg" src="image/Boston2.jpg" alt="boston picture">
+	<img class="winterbreakimg" src="image/boston1.jpg" alt="boston picture">
+	<img class="winterbreakimg" src="image/boston2.jpg" alt="boston picture">
 </body>
 </html>
