fixed some space problem from feedback

--- a/winter2022.html
+++ b/winter2022.html
@@ -21,24 +21,28 @@
       <li><a href="winter2022.html">Winter2022</a></li>
       <li><a href="myproject.html">Project</a></li>
       <li><a href="map.html">Map</a></li>
-      </ul>
+    </ul>
   </header>
-	<h2 class="wintertitle">-Winter2022-</h2>
-	<p class="maincategory_winter">I had a nice vacation last winter break. I went to New York. Although this is my second time visited New York, it still gave me an amazing experience.</p>
-	<ul class="wintertext">
+  <section>
+  <h2 class="wintertitle">-Winter2022-</h2>
+  <p class="maincategory_winter">I had a nice vacation last winter break. I went to New York. Although this is my second time visited New York, it still gave me an amazing experience.</p>
+  <ul class="wintertext">
     <li>the road near the Vessel</li>
     <li>Statue of Liberty</li>
     <li>Times Square</li>
-	</ul>
-	<img class="winterbreakimg" src="image/newyork1.jpg" alt="newyork picture">
-	<img class="winterbreakimg" src="image/newyork2.jpg" alt="newyork picture">
-	<img class="winterbreakimg1" src="image/newyork3.jpg" alt="newyork picture">
-	<p class="maincategory_winter">After New York, l went to Boston. Boston was really peaceful and quiet. Moreover, I visited the top schools Harvard and MIT because those are the most important things on this trip.</p>
-	<ul class="wintertext">
-	  <li>Harvard University</li>
-	  <li>Massachusetts Institute of Technology(MIT)</li>
-	</ul>
-	<img class="winterbreakimg" src="image/boston1.jpg" alt="boston picture">
-	<img class="winterbreakimg" src="image/boston2.jpg" alt="boston picture">
+  </ul>
+  <img class="winterbreakimg" src="image/newyork1.jpg" alt="newyork picture">
+  <img class="winterbreakimg" src="image/newyork2.jpg" alt="newyork picture">
+  <img class="winterbreakimg1" src="image/newyork3.jpg" alt="newyork picture">
+  </section>
+  <section>
+    <p class="maincategory_winter">After New York, l went to Boston. Boston was really peaceful and quiet. Moreover, I visited the top schools Harvard and MIT because those are the most important things on this trip.</p>
+    <ul class="wintertext">
+      <li>Harvard University</li>
+      <li>Massachusetts Institute of Technology(MIT)</li>
+    </ul>
+    <img class="winterbreakimg" src="image/boston1.jpg" alt="boston picture">
+    <img class="winterbreakimg" src="image/boston2.jpg" alt="boston picture">
+  </section>
 </body>
 </html>
