--- a/myproject.html
+++ b/myproject.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-	<title>Document</title>
+  <meta charset="UTF-8">
+  <title>Document</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
@@ -21,21 +21,23 @@
 		<li><a href="myproject.html">Project</a></li>
     <li><a href="map.html">Map</a></li>
   </ul>
-	<h2 class="projecttitle">My project</h2>
-	<p class="maincategory_project">When I was in university, I was doing a Airport improvement project. In this project, we have to travel to airports in Singapore and South Korea to find out how services can be improved at Taoyuan Airport in Taiwan</p>
-	<ul class="projecttext">
-	  <li>The charts show their age, countries, visit time, and the satisfaction of the airports</li>
-	</ul>
-	<img class="projectimg" src="image/project2.jpg" alt="project picture">
-	<img class="projectimg" src="image/project3.jpg" alt="project picture">
-	<ul class="projecttext">
-	  <li>After that, insert all of the data into the excel. With the SPSS system, the data will be analyzed to the outcome</li>
-	</ul>
-	<img class="projectimg1" src="image/project1.jpg" alt="project picture">
-	<img class="projectimg2" src="image/project4.jpg" alt="project picture">
   <section>
-	<h3>Singapore's wins sixth consecutive title of 'world's best airport'</h3>
-  <iframe style="border:0;" width="560" height="315" src="https://www.youtube.com/embed/55NYl6ucJtM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <h2 class="projecttitle">My project</h2>
+    <p class="maincategory_project">When I was in university, I was doing a Airport improvement project. In this project, we have to travel to airports in Singapore and South Korea to find out how services can be improved at Taoyuan Airport in Taiwan</p>
+    <ul class="projecttext">
+      <li>The charts show their age, countries, visit time, and the satisfaction of the airports</li>
+    </ul>
+    <img class="projectimg" src="image/project2.jpg" alt="project picture">
+    <img class="projectimg" src="image/project3.jpg" alt="project picture">
+    <ul class="projecttext">
+      <li>After that, insert all of the data into the excel. With the SPSS system, the data will be analyzed to the outcome</li>
+    </ul>
+    <img class="projectimg1" src="image/project1.jpg" alt="project picture">
+    <img class="projectimg2" src="image/project4.jpg" alt="project picture">
+  </section>    
+  <section>
+    <h3>Singapore's wins sixth consecutive title of 'world's best airport'</h3>
+    <iframe style="border:0;" width="560" height="315" src="https://www.youtube.com/embed/55NYl6ucJtM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </section>
 </body>	
 </html>	
