--- a/myproject.html
+++ b/myproject.html
@@ -37,7 +37,7 @@
   </section>    
   <section>
     <h3>Singapore's wins sixth consecutive title of 'world's best airport'</h3>
-    <iframe style="border:0;" width="560" height="315" src="https://www.youtube.com/embed/55NYl6ucJtM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe style="border:0;" width="560" height="315" src="https://www.youtube.com/embed/55NYl6ucJtM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </section>
 </body>	
 </html>	
