--- a/myproject.html
+++ b/myproject.html
@@ -19,6 +19,7 @@
     <li><a href="index.html">Resume</a></li>
     <li><a href="winter2022.html">Winter2022</a></li>
     <li><a href="myproject.html">Project</a></li>
+    <li><a href="map.html">Map</a></li>
   </ul>
   <section>
     <h2 class="projecttitle">My project</h2>
