--- a/map.html
+++ b/map.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  <title>stript</title>
   <script src= "js/index.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwEHZpseJX8jWCr5wzHXbUPz8CmlP6PHs&callback=initMap&libraries=&v=weekly" async defer></script>
 </head>
